--- a/src/styles/cartitem.css
+++ b/src/styles/cartitem.css
@@ -1,8 +1,10 @@
 .cart{
-    display: inline-block;
-    grid-template-columns: repeat(9, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    width: 30%;
+    display : flex;
+    vertical-align: top;
+    /* text-align : left;  */
+    /* align-items: flex-start; */
+    /* align-self: left; */
+    flex-direction: row;
 }
 
 .hideTotal{
@@ -17,4 +19,62 @@
     text-decoration: underline;
     font-style: italic;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.columnStyle{
+    display:flex;
+    /* flex-direction: row; */
+    justify-content: space-around;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-color: brown;
+}
+
+.columnItemStyle{
+    display: flex;
+    /* flex-direction: row; */
+    /* flex-wrap: nowrap; */
+    justify-content: space-around;
+    /* align-self: flex-start; */
+    background-color: brown;
+    height: 150px;
+}
+
+.columnItemStyle>p {
+    font-weight: bold;
+    font-size: larger;
+    background: white;
+    width: 26.66%;
+    
+}
+
+
+.column-image-style{
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: calc(100%-20px);
+    align-self: flex-start;*/
+    background-color: brown; 
+    width: 200px;
+    height: 100px;
+    margin-left: 10rem ;
+    min-width: 10px;
+    margin-top: 10px;
+}
+
+.button-style{
+    width: 200px;
+    height: 50px;
+    border-color: brown;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    font-size: 1.4rem;
+    margin-left: 10px;
+}
+
+.button-style:hover{
+    background-color: burlywood;
+    cursor:pointer
 }
