--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -50,6 +50,8 @@
     cursor:pointer;
     margin:0.2rem 0.5rem 0.2rem 0;
     transition:all 0.5s ease-in-out;
+    position: relative;
+    z-index: 5;
 }
 
 .seeCartButton:hover{
@@ -59,4 +61,10 @@
     
 .seeCartButton:focus{
         outline:none;
+    }
+
+
+    .menu-style{
+        cursor: pointer;
+        color: blue;
     }
