--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,10 +1,13 @@
 .column {
     display: inline-block;
     width: 33%;
-    height: 100px;
-    padding: 5px;
-    margin: 5px;
+}
 
+.column div{
+    height: 130px;
+    min-height: 130px;
+    margin: 20px;
+    
 }
 
 .btn {
@@ -12,7 +15,7 @@
     color: brown;
     background_color: white;
     font-size:
-};
+}
 
 
 .read-more-link{
@@ -26,3 +29,4 @@
     color: cornflowerblue;
     font-weight: 500;
 }
+
