--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,62 +1,78 @@
 .navbar {
-    color: whitesmoke;
-    background-color: darksalmon;
+    color: whitesmoke; 
+    box-shadow: 0 0 25px 0 black; 
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
     height: 80px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 25px 0 black;
-    margin: 10px;
-    justify-content: center;
-    flex-direction: row;
+    background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
 }
 
 .cart {
-    font-size: 30px;
+    /*
     border-radius: 6px;
     display: inline-block;
-    width: 60%;
+    width: 10px;
     position: relative;
     transform: translatex(50%);
+    margin-right: 100rem;
+    display: none;*/
+    font-size: 30px;
+    position: absolute;
+    right: 10px;
+    top: 2rem;
+    padding: 5px;
+    color: rgb(240, 232, 232);
+    transform: translatex(50%);
+    margin-bottom: 20rem;
+    margin-left: 100rem;
+    margin-right: 83rem;
 }
 
-.navtext {
+.navtext  div{
     font-family: Georgia, 'Times New Roman', Times, serif ;
+    display: inline-block;
+    position: relative;
     font-size: 16px;
-    margin: 20px;
+    text-transform: uppercase;
+    color: #f1f1f1;
+  
 }
 
 .cartcounter {
     font-size: 30px;
-    color: rgb(16, 143, 33);
     padding: 0 5px;
-    top: 0px;
+    top: 20px;
     display: inline-block;
     position: relative;
-    transform: translateY(-60%)
+    transform: translateY(-60%);
+    margin-left: 0rem;
+    margin-right: 60px;
+    text-transform: uppercase;
+    color: rgb(7, 7, 7);
+    position: absolute;
 }
 
 .seeCartButton{
-    text-transform:capitalize;
-    font-size: 1.4rem;
+    font-size: 1.5rem; 
+    transition:all 0.5s ease-in-out;
+    position: absolute;
+    z-index: 5;
+    color: #f1f1f1;
     background:transparent;
     border: 0.05rem solid lightBlue;
     border-color: Yellow;
     border-radius: 0.5rem;
-    padding: 0.5rem 0.5rem;
     cursor:pointer;
-    margin:0.2rem 0.5rem 0.2rem 0;
-    transition:all 0.5s ease-in-out;
-    position: relative;
-    z-index: 5;
+    display: inline-block;
+    top: 2rem;
+    margin-left: 55px;
+    
 }
 
 .seeCartButton:hover{
         background: Yellow;
-        color:mainBlue;
+        color: red;
 }
     
 .seeCartButton:focus{
@@ -64,7 +80,84 @@
     }
 
 
-    .menu-style{
+.menu-container { 
+    display:flex;
+    justify-content: left;  
+    align-items: left;
+    flex-direction: row;
+    
+}
+
+.menu {
+        background: #ffffff;
+        border-radius: 8px;
+        align-items: left;
+        
+        left: 0px;
+        width: 30px;
+        margin-right: 20rem;
+        box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(0px);
+        transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;
+      }
+      
+      .menu.active {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(80px);
+        top: 500px;
+      }
+
+      .menu-trigger {
+        color: black;
+        font-size: 40px;
         cursor: pointer;
-        color: blue;
+        display: flex;
+        justify-content: space-between;
+        align-items: left;
+        padding: 4px 6px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+        border: none;
+        vertical-align: middle;
+        transition: box-shadow 0.4s ease;
+        /*background: #ffffff;
+        border-radius: 90px;*/
+      }
+      
+      .menu-trigger:hover {
+        box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+      }
+      
+     /* .menu-trigger span {
+        font-weight: 700;
+        vertical-align: middle;
+        font-size: 14px;
+        margin: 0 10px;
+      }*/
+      
+     /* .menu-trigger img {
+        border-radius: 90px;
+      }*/
+
+      @media screen and (max-width: 500px){
+        .list {
+            flex-direction: column;
+            height: auto;
+        }
+        .items:nth-child(1){
+            border-top: 1px solid rgba(255, 255, 255, 0.555);
+            margin-top: 50px;
+        }
+        .items {
+            width: 100%;
+            border-top: 1px solid rgba(255, 255, 255, 0.555);
+            text-align: center;
+            margin-right: 0px;
+            padding: 20px 0;
+        }
+        .btn {
+            display: block;
+        }
     }
