--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -167,9 +167,9 @@
         }
     }*/
 
-    @media screen and (max-width: 960px) {
-        .NavbarItems {
-          position: relative;
+    @media screen and (max-width: 480px) {
+        .navbar {
+          position: fixed;
         }
       
         .nav-menu {
@@ -204,22 +204,26 @@
           color: #242424;
           border-radius: 0;
         }
-      
-        .navbar-logo {
+      /*.navbar-logo*/
+        .cart {
           position: absolute;
           top: 0;
           left: 0;
           transform: translate(25%, 50%);
         }
       
-        .menu-icon {
+        /*.menu-icon*/
+        .cartCounter {
           display: block;
           position: absolute;
           top: 0;
           right: 0;
+          margin-left: 5rem auto;
           transform: translate(-100%, 60%);
           font-size: 1.8rem;
-          cursor: pointer;
+          /*cursor: pointer;
+          opacity: 0;
+          visibility: hidden;  */  
         }
       
         .fa-times {
@@ -227,12 +231,14 @@
           font-size: 2rem;
         }
       
-        .nav-links-mobile {
+        /*.nav-links-mobile */
+        /*.cartcounter{
           display: block;
           text-align: center;
           margin: 2rem auto;
+          margin-right: 5rem auto;
           border-radius: 4px;
-          width: 80%;
+          width: 5%;
           text-decoration: none;
           font-size: 1.5rem;
           background-color: transparent;
@@ -240,7 +246,7 @@
           padding: 14px 20px;
           border: 1px solid #fff;
           transition: all 0.3s ease-out;
-        }
+        }*/
       
         .nav-links-mobile:hover {
           background: #fff;
