--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -46,12 +46,6 @@
     
     .menu-btn {
         display: none;
-        position: absolute;
-        right: 10px;
-        top: 7px;
-        padding: 5px;
-        color: #000;
-        font-size: 48px;
     }
     
     @media screen and (max-width: 600px) {
@@ -60,20 +54,24 @@
         }
         .menu-container {
             display: flex;
+            width: 50%;
             height: auto;
             flex-direction: column;
-            background: #333;
+            font-size: 16px;
+            padding: 0px;
         }
         .items {
-            width: 100%;
+            width: 50%;
             border-top: 1px solid rgba(255, 255, 255, 0.555);
             text-align: center;
-            margin-right: 0px;
-            padding: 20px 0;
+            font-size: 20px;
             z-index: 10;
             background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
         }
-        .menu-btn {}
+        .menu-btn {
+            display: block;
+            position: absolute;
+        }
         .menu-btn:hover {
             background: rgba(255, 255, 255, 0.2);
             box-shadow: 0px 20px 40px rgba(31, 47, 71, 0.25), 0px 1px 5px rgba(0, 0, 0, 0), inset 0, 0, 0, 0.5px rgba(255, 255, 255, 0.4)
